# jira-work-hours

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  pyproject.toml  vacation_optimizer.py
