[project]
name = "work-hours"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=3.41.16",
    "drawsvg>=2.4.0",
    "fastapi[standard]>=0.115.6",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
]
